Fix login register mobile spacing.

--- a/src/App.css
+++ b/src/App.css
@@ -105,4 +105,12 @@
   .custom-notification {
     line-height: initial;
   }
+
+  .custom-validation {
+    margin-top: 10px;
+  }
+
+  #password-field {
+    margin-top: 30px;
+  }
 }
